2014-03-07  Tobias Brox <t-caldav@tobixen.no>
	* caldav/objects.py - minor doc enhancement
	* tests/test_caldav.py - more test code; tests that it's possible
	to load an event or a calendar by the URL, tests that the
	calendar.events() method works, and that it works as expected when
	having recurring events in the calendar.
	* docs/source/index.rst - documentation on how to run the test
	suite towards private calendar servers
	* setup.py - version bump

2014-03-01  Tobias Brox <t-caldav@tobixen.no>
	* caldav/lib/url.py (make): function for backward compatibility

	* tests/: more test code, including backward compatibility test

2014-02-16  Tobias Brox <t-caldav@tobixen.no>
	* caldav/lib/namespace.py: fixing issue
	https://bitbucket.org/cyrilrbt/caldav/issue/29/centos59-minifix

2013-12-12  Tobias Brox <t-caldav@tobixen.no>
	* caldav/objects.py (Calendar): compatibility hack for zimbra -
	gotcha!  Use Calendar display name in the Calendar URL instead of
	Calendar ID.

	* caldav/objects.py: internal change - _create method now returns
	nothing, but sets self.url and self.id instead.

2013-12-11  Tobias Brox <t-caldav@tobixen.no>
	* caldav/objects.py (DAVObject): convenience fix - made client a
	conditional parameter to __init__.  Defaults to parent.client if
	parent is given.

	* caldav/objects.py (Calendar): convenience fix - made methods
	Calendar.event_by_uid and Calendar.event_by_url.  Calendar.event
	is an alias to Calendar.event_by_uid for backwards compatibility.
	Those methods also loads the object from the remote server (hmmm
	... does that make sense, it's inconsistent with the
	CalendarSet.calendar method)

	* caldav/objects.py (Event): a potential compatibility fix - when
	creating an event, some servers seems to want the uid to match the
	URL (zimbra will yield 302 on the PUT request).  However, I wasn't
	able to GET the event from zimbra, neither before nor after this
	fix :-(

	* caldav/elements/cdav.py: compatibility fix - collation 